--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                                 <div class="header-mobile">
                                     <a class="header-toggle"><i class="fas fa-bars"></i></a>
-                                    <h2>Esaud Tapia</h2>
+                                    <h2>Esaud Tpia</h2>
                                 </div>
 
                                 <!-- Left Block -->
